Finished do while
Do while loop is complete

--- a/Loops_Worksheet/Loops_Homework.html
+++ b/Loops_Worksheet/Loops_Homework.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>While loops worksheet</title>
-    <script src="js/While loops_Homework.js"></script>
+    <script src="js/Loops_Homework.js"></script>
 </head>
 
 <body>
